# solana-streams

./: .gitignore  README.md  package-lock.json  package.json
client/: package-lock.json  package.json
client/keys/: account1.json  solanastreams-keypair.json
client/src/: App.tsx  routes.tsx
client/src/scripts/: config.ts  main.ts  state.ts  stream.ts  utils.ts
client/src/views/: home.jsx  index.tsx  stream.jsx
keys/: account2.json
program/: Cargo.toml
program/src/: errors.rs  instruction.rs  lib.rs  state.rs
